<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/prev_container"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.zemoso.assignment.activities.fragments.PreviewFragment">

    <com.google.android.exoplayer2.ui.SimpleExoPlayerView
        android:id="@+id/exoplayer"
        android:layout_width="match_parent"
        app:use_controller="false"
        app:resize_mode="fill"
        android:layout_height="match_parent">

    </com.google.android.exoplayer2.ui.SimpleExoPlayerView>
    <ImageButton
        android:contentDescription="@string/save"
        android:layout_centerHorizontal="true"
        android:id="@+id/save"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_action_name"/>
    <TextView
        android:id="@+id/comment_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <RelativeLayout
        android:id="@+id/comments_holder"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </RelativeLayout>
</RelativeLayout>
